# dataviz_2025

./: .gitignore  README.md  chat.py  explore.ipynb  justfile  linegraph.html  linegraph.py  main.py  my_notebook.py  pyproject.toml  test_altair.py  tree_map.py
notebooks/: explore.ipynb
results/: tree_map_hierarchy_1.html
