[project]
name = "dataviz-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.4.0",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "marimo>=0.15.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
