[project]
name = "dataviz-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "chainlit>=2.8.0",
    "duckdb>=1.4.0",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "marimo>=0.15.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "squarify>=0.4.4",
    "tabulate>=0.9.0",
    "vl-convert-python>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]
